--- a/.github/workflows/pipeline.yaml
+++ b/.github/workflows/pipeline.yaml
@@ -16,10 +16,18 @@ jobs:
       - name: Checkout repository
         uses: actions/checkout@v2
 
-      - name: Set up LaTeX
+      - name: Install latexmk
+        run: |
+          sudo apt-get update
+          sudo apt-get install -y latexmk
+
+      - name: Set up LaTeX        
         uses: xu-cheng/latex-action@v2
         with:
-          root_file: main.tex
+          root_file: |
+           main.tex
+           education.tex
+           professional_experiance.tex
 
       - name: Build LaTeX
         run: |
