Adicionado passo de log

--- a/.github/workflows/pipeline.yaml
+++ b/.github/workflows/pipeline.yaml
@@ -29,6 +29,10 @@ jobs:
       - name: Build LaTeX
         run: |
           latexmk -pdf -interaction=nonstopmode main.tex
+      
+      - name: Build log results
+        run: |
+          cat main.log
 
       - name: Upload PDF artifact
         uses: actions/upload-artifact@v2
