--- a/.github/workflows/pipeline.yaml
+++ b/.github/workflows/pipeline.yaml
@@ -29,7 +29,7 @@ jobs:
       - name: Build LaTeX
         id: build-latex
         run: |
-          latexmk -pdf -interaction=nonstopmode -silent main.tex
+          latexmk -pdf -interaction=nonstopmode -f main.tex
         continue-on-error: true
         
       - name: Build log results
