--- a/.github/workflows/pipeline.yaml
+++ b/.github/workflows/pipeline.yaml
@@ -21,16 +21,16 @@ jobs:
           sudo apt-get update
           sudo apt-get install -y latexmk
 
-      - name: Set up LaTeX        
-        uses: xu-cheng/latex-action@v2
-        with:
-          root_file: main.tex
+      # - name: Set up LaTeX        
+      #   uses: xu-cheng/latex-action@v2
+      #   with:
+      #     root_file: main.tex
 
-      - name: Build LaTeX
-        id: build-latex
-        run: |
-          latexmk -pdf -interaction=nonstopmode -f main.tex
-        continue-on-error: true
+      # - name: Build LaTeX
+      #   id: build-latex
+      #   run: |
+      #     latexmk -pdf -interaction=nonstopmode -f main.tex
+      #   continue-on-error: true
         
       - name: Build log results
         run: |
